# minecraft_server_manager

./: Cargo.toml  DESIGN.md  README.md
.claude/: CLAUDE.md
src/: api.rs  backup.rs  ban.rs  config.rs  datapack_mgr.rs  discord.rs  ftb.rs  instance.rs  java.rs  main.rs  metrics.rs  metrics_db.rs  mod_mgr.rs  modpack.rs  restart.rs  scheduler.rs  setup.rs  sse.rs  state.rs  whitelist.rs
src/ui/: app.js  index.html  style.css
