[package]
name = "minecraft_server_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
open = "5"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tar = "0.4"
zstd = "0.13"
cron = "0.12"
